--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,19 @@
   </head>
 
   <body>
-    <main class="container mx-auto mt-28 px-5 flex">
-      <%= yield %>
-    </main>
+    <% if signed_in? %>
+      <%= render 'shared/header' %>
+      <div style="padding-top: 64px; padding-bottom: 64px;">
+        <%= yield %>
+      </div>
+      <%= render 'shared/footer' %>
+
+    <% else %>
+      <%= render 'shared/before_login_header' %>
+      <div style="padding-top: 64px; padding-bottom: 64px;">
+        <%= yield %>
+      </div>
+      <%= render 'shared/before_login_footer' %>
+    <% end %>
   </body>
 </html>
