20250521_fix:軽度の修正

--- a/app/views/your_profiles/edit.html.erb
+++ b/app/views/your_profiles/edit.html.erb
@@ -1,14 +1,5 @@
-<div class="container">
-  <div class="row">
-    <div>
-      <%= form_with model: @user, url: your_profile_path method: :put do |f| %>
-        <%= f.lavel :avatar %>
-      <% end %>
-    </div>
+<div class="container mx-auto px-4">
+  <div class="spot-card bg-orange-200 rounded-lg border border-orange-700 p-4 space-y-6 max-w-5xl mx-auto">
+  
   </div>
 </div>
-
-
-    <%= @user.avatar %>
-    <%= @user.name %>
-    <%= @user.email %>
