--- a/app/views/your_profiles/show.html.erb
+++ b/app/views/your_profiles/show.html.erb
@@ -1,12 +1,14 @@
-<div class="container">
-  <div class="row">
-    <button>output</button>
-    <%= button_to "Logout", destroy_user_session_path, method: :delete, class: "btn btn-active btn-neutral" %>
+<div class="container mx-auto px-4">
+  <div class="spot-card bg-orange-200 rounded-lg border border-orange-700 p-4 space-y-6 max-w-5xl mx-auto">
+    <div class="font-bold text-2xl">プロフィール</div>
 
     <%= link_to "編集", edit_your_profile_path, class: "btn btn-secondary w-20" %>
     <div class="flex flex-col">
-      <%= @user.name %>
-      <%= @user.email %>
+      <%= current_user.name %>
+      <%= current_user.email %>
     </div>
+
+    <%= button_to "Logout", destroy_user_session_path, method: :delete, class: "btn btn-active btn-neutral" %>
+
   </div>
 </div>
