--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,5 +1,4 @@
-
-  <div class="w-full text-center">
+  <div class="text-center mx-auto">
     <h1 class="text-6xl font-bold m-8">
       Welcome!!<br />
       SaitaManear<br />
@@ -10,12 +9,13 @@
     <h1 class="text-3xl font-bold m-8 text-orange-500">
       春日部つむぎ<br />
       「お前が埼玉県民になるんだよ！」<br />
-      <br />
+    </h1>
+    <h1 class="text-3xl font-bold m-8 text-lime-500">
       ずんだもん<br />
       「えぇ…」
     </h1>
 
-    <h1>
+    <h1 class mx-auto>
     SaitaManearとは？<br />
     埼玉県の有名な観光地などに向かった「ついでに」サイトにはあまり書かれていない<br />
     現在地から近くの知られていない秘境や、なんや変わりのなさそうな場所の魅力を検索して探索ができる。<br />
@@ -25,16 +25,16 @@
 
   </div>
 
-  <div class="fixed bottom-20 left-0 right-0 flex justify-center flex">
-    <%= link_to '#', class:"btn px-5" do %>
+  <div class="flex justify-center flex-col pt-8">
+    <%= link_to '#', class: "inline-block bg-orange-200 border-b-1 border-t-2 border-orange-300 hover:bg-orange-300 font-semibold py-2 px-4" do %>
     <span>利用規約</span>
     <% end %>
 
-    <%= link_to '#', class:"btn px-5" do %>
+    <%= link_to '#', class: "inline-block bg-orange-200 border-b-1 border-t-1 border-orange-300 hover:bg-orange-300 font-semibold py-2 px-4" do %>
     <span>プライバシーポリシー</span>
     <% end %>
 
-    <%= link_to '#', class:"btn px-5" do %>
+    <%= link_to '#', class: "inline-block bg-orange-200 border-b-2 border-t-1 border-orange-300 hover:bg-orange-300 font-semibold py-2 px-4" do %>
     <span>お問い合わせ</span>
     <% end %>
     
