--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
   <!-- ヘッダー -->
   <div class="flex items-center justify-between bg-green-400 py-2">
-    <div class="flex-1">
-      <a class="text-3xl font-bold text-orange-600">Saita<span class="text-yellow-400">Manear</span></a>
+    <div class="text-3xl font-bold text-orange-600">
+      <a href="#" class="px-1">Saita<span class="text-yellow-400">Manear</span></a>
     </div>
     <div class="flex-none">
       <%= link_to your_profile_path, class:"flex flex-col items-center font-bold flex-1 hover:text-yellow-600" do %>
