--- a/app/views/your_profiles/show.html.erb
+++ b/app/views/your_profiles/show.html.erb
@@ -1,14 +1,54 @@
-<div class="container mx-auto px-4">
-  <div class="spot-card bg-orange-200 rounded-lg border border-orange-700 p-4 space-y-6 max-w-5xl mx-auto">
+<div class="container mx-auto w-96">
+  <div class="spot-card bg-orange-200 rounded-lg border-2 border-orange-300 border- p-4 space-y-6 max-w-5xl mx-auto">
     <div class="font-bold text-2xl">プロフィール</div>
 
-    <%= link_to "編集", edit_your_profile_path, class: "btn btn-secondary w-20" %>
-    <div class="flex flex-col">
-      <%= current_user.name %>
-      <%= current_user.email %>
+      <div class="flex flex-col p-3">
+        <div class="px-5">
+          <div class="text-bold text-xl">アカウント名</div>
+        <div class="px-10">
+          <%= current_user.name %>
+        </div>
+      </div>
+
+      <div class="flex flex-col p-3">
+        <div class="px-5">
+          <div class="text-bold text-xl">メールアドレス</div>
+        <div class="px-10">
+          <%= current_user.email %>
+        </div>
+      </div>
+
+      <div class="flex flex-row items-start pt-10 justify-end">
+        <%= link_to "編集", edit_your_profile_path(current_user), class: "bg-blue-500 hover:bg-blue-600 text-white w-25 py-2 rounded text-xs text-center" %>
+      </div>
     </div>
+  </div>
 
-    <%= button_to "Logout", destroy_user_session_path, method: :delete, class: "btn btn-active btn-neutral" %>
 
+  <div class="fixed bottom-16 left-0 right-0 w-full">
+    <div class="max-w-2xl mx-auto">
+      <div class="flex justify-between text-center justify-center items-center">
+        <%= link_to '#', class: "w-1/3 bg-orange-200 border-r-1 border-l-2 border-orange-300 hover:bg-orange-300 font-semibold text-sm block py-3" do %>
+          <div class="flex flex-col ">
+            <span>お気に入り</span>
+            <span>スポット一覧</span>
+          </div>
+        <% end %>
+
+        <%= link_to your_spots_path, class: "w-1/3 bg-orange-200 border-r-1 border-l-1 border-orange-300 hover:bg-orange-300 font-semibold text-sm block py-3" do %>
+          <div class="flex flex-col ">
+            <span>登録した</span>
+            <span>スポット一覧</span>
+          </div>
+        <% end %>
+
+        <%= link_to '#', class: "w-1/3 bg-orange-200 border-r-2 border-l-1 border-orange-300 hover:bg-orange-300 font-semibold text-sm block py-3" do %>
+          <div class="flex flex-col">
+            <span>プロフィール</span>
+            <span>編集</span>
+          </div>
+        <% end %>
+      </div>
+    </div>  
   </div>
 </div>
