--- a/app/views/your_profiles/show.html.erb
+++ b/app/views/your_profiles/show.html.erb
@@ -23,32 +23,8 @@
       </div>
     </div>
   </div>
-
-
-  <div class="fixed bottom-16 left-0 right-0 w-full">
-    <div class="max-w-2xl mx-auto">
-      <div class="flex justify-between text-center justify-center items-center">
-        <%= link_to '#', class: "w-1/3 bg-orange-200 border-r-1 border-l-2 border-orange-300 hover:bg-orange-300 font-semibold text-sm block py-3" do %>
-          <div class="flex flex-col ">
-            <span>お気に入り</span>
-            <span>スポット一覧</span>
-          </div>
-        <% end %>
-
-        <%= link_to your_spots_path, class: "w-1/3 bg-orange-200 border-r-1 border-l-1 border-orange-300 hover:bg-orange-300 font-semibold text-sm block py-3" do %>
-          <div class="flex flex-col ">
-            <span>登録した</span>
-            <span>スポット一覧</span>
-          </div>
-        <% end %>
-
-        <%= link_to '#', class: "w-1/3 bg-orange-200 border-r-2 border-l-1 border-orange-300 hover:bg-orange-300 font-semibold text-sm block py-3" do %>
-          <div class="flex flex-col">
-            <span>プロフィール</span>
-            <span>編集</span>
-          </div>
-        <% end %>
-      </div>
-    </div>  
-  </div>
 </div>
+
+<%= button_to "ログアウト", destroy_user_session_path, method: :delete, data: { confirm: "ログアウトしますか？" }, class: "bg-red-500 hover:bg-red-600 text-white px-4 py-1 rounded text-xs text-center" %>
+
+<%= render 'shared/your_page_footer_form' %>
