--- a/app/views/your_profiles/edit.html.erb
+++ b/app/views/your_profiles/edit.html.erb
@@ -1,5 +1,27 @@
-<div class="container mx-auto px-4">
-  <div class="spot-card bg-orange-200 rounded-lg border border-orange-700 p-4 space-y-6 max-w-5xl mx-auto">
-  
+<div class="container mx-auto w-96">
+  <div class="spot-card bg-orange-200 rounded-lg border-2 border-orange-300 border- p-4 space-y-6 max-w-5xl mx-auto">
+    <div class="font-bold text-2xl">プロフィール編集</div>
+
+      <%= form_with(model: @user, url: your_profile_path,  method: :patch, html: {multipart: true, class: "space-y-4" }) do |f| %>
+        <div class="flex flex-col p-3 space-y-4">
+          <div>
+            <%= f.label :name, "アカウント名", class: "block font-medium text-gray-700 mb-1" %>
+            <%= f.text_field :name, class: "w-full border border-gray-300 rounded-md p-2 bg-white" %>
+          </div>
+
+          <div>
+            <%= f.label :email, "メールアドレス", class: "block font-medium text-gray-700 mb-1" %>
+            <%#= f.text_field :email, class: "w-full border border-gray-300 rounded-md p-2 bg-white" %>
+            <%= current_user.email %>
+          </div>
+
+          <div class="flex flex-row items-start pt-10 justify-end">
+            <%= f.submit "登録", class: "bg-blue-500 hover:bg-blue-600 text-white w-25 py-2 rounded text-xs text-center" %>
+          </div>
+        </div>
+      <% end %>
+    </div>
   </div>
 </div>
+
+<%= render 'shared/your_page_footer_form' %>
