--- a/app/views/your_profiles/show.html.erb
+++ b/app/views/your_profiles/show.html.erb
@@ -12,8 +12,9 @@
 
       <div class="flex flex-col p-3">
         <div class="px-5">
-          <div class="text-bold text-xl">メールアドレス</div>
-        <div class="px-10">
+          <div class="text-bold text-xl">
+            メールアドレス <br />
+            (変更機能未実装)</div>
           <%= current_user.email %>
         </div>
       </div>
@@ -23,8 +24,12 @@
       </div>
     </div>
   </div>
-</div>
 
-<%= button_to "ログアウト", destroy_user_session_path, method: :delete, data: { confirm: "ログアウトしますか？" }, class: "bg-red-500 hover:bg-red-600 text-white px-4 py-1 rounded text-xs text-center" %>
+  <div class="p-3">
+    <%= button_to "ログアウト", destroy_user_session_path, method: :delete, 
+                              data: { turbo: false, confirm: "ログアウトしますか？" }, 
+                              class: "bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded text-xs text-center" %>
+  </div>
+</div>
 
 <%= render 'shared/your_page_footer_form' %>
