--- a/app/views/your_spots/index.html.erb
+++ b/app/views/your_spots/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto px-4">
+<div class="container mx-auto px-4 pb-16">
   <!-- 全体の黄色背景ボックス -->
   <div class="bg-orange-200 rounded-lg border border-orange-700 p-4 space-y-6 max-w-5xl mx-auto">
 
@@ -33,9 +33,11 @@
                                   data: { confirm: "本当に削除しますか？" }, 
                                   class: "bg-red-500 hover:bg-red-600 text-white px-4 py-1 rounded text-xs text-center" %>
           </div>
-
         </div>
       <% end %>
+      <div class >
+        <%= paginate @spots %>
+      </div>
     <% else %>
       <p>登録したスポットはありません。</p>
     <% end %>
