--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+
+@layer components {
+  .alert-notice {
+    @apply p-3 mb-4 rounded border bg-sky-100 text-blue-800;
+  }
+
+  .alert-error {
+    @apply p-3 mb-4 rounded border bg-red-100 text-red-800;
+  }
+}
