--- a/app/views/shared/_spot_form.html.erb
+++ b/app/views/shared/_spot_form.html.erb
@@ -1,4 +1,4 @@
-    <%= form_with(model: @spot, local: true, html: { multipart: true, class: "space-y-6" }) do |f| %>
+    <%= form_with(model: @spot, local: true, url: form_url, html: { multipart: true, class: "space-y-6" }) do |f| %>
       <!-- マーカー名称 -->
       <div>
         <%= f.label :name, "マーカー名称", class: "block font-medium text-gray-700 mb-1" %>
