--- a/app/views/your_profiles/edit.html.erb
+++ b/app/views/your_profiles/edit.html.erb
@@ -1,8 +1,11 @@
 <div class="container mx-auto w-96">
+
+  <%= render 'shared/flash_message'%>
+
   <div class="spot-card bg-orange-200 rounded-lg border-2 border-orange-300 border- p-4 space-y-6 max-w-5xl mx-auto">
     <div class="font-bold text-2xl">プロフィール編集</div>
 
-      <%= form_with(model: @user, url: your_profile_path,  method: :patch, html: {multipart: true, class: "space-y-4" }) do |f| %>
+      <%= form_with(model: @user, local: true, url: your_profile_path, method: :patch, html: {multipart: true, class: "space-y-4" }) do |f| %>
         <div class="flex flex-col p-3 space-y-4">
           <div>
             <%= f.label :name, "アカウント名", class: "block font-medium text-gray-700 mb-1" %>
