--- a/app/views/your_profiles/show.html.erb
+++ b/app/views/your_profiles/show.html.erb
@@ -1,4 +1,7 @@
 <div class="container mx-auto w-96">
+
+  <%= render 'shared/flash_message'%>
+
   <div class="spot-card bg-orange-200 rounded-lg border-2 border-orange-300 border- p-4 space-y-6 max-w-5xl mx-auto">
     <div class="font-bold text-2xl">プロフィール</div>
 
