--- a/app/views/your_spots/index.html.erb
+++ b/app/views/your_spots/index.html.erb
@@ -1,48 +1,51 @@
 <div class="container mx-auto px-4 pb-16">
-  <!-- 全体の黄色背景ボックス -->
-  <div class="bg-orange-200 rounded-lg border border-orange-700 p-4 space-y-6 max-w-5xl mx-auto">
+  <div class="max-w-5xl mx-auto">
+    <%= render 'shared/flash_message'%>
 
-    <% if @spots.present? %>
-      <% @spots.each do |spot| %>
-        <!-- 各投稿のカード -->
-        <div class="bg-white border-2 border-orange-400 rounded-md px-8 shadow flex items-center justify-between">
+    <!-- 全体の黄色背景ボックス -->
+    <div class="bg-orange-200 rounded-lg border border-orange-700 p-4 space-y-6">
 
-          <!-- 左：スポット情報 -->
-          <div class="text-sm space-y-1">
-            <p class="font-bold">マーカー名：<%= spot.name %></p>
+      <% if @spots.present? %>
+        <% @spots.each do |spot| %>
+          <!-- 各投稿のカード -->
+          <div class="bg-white border-2 border-orange-400 rounded-md px-8 shadow flex items-center justify-between">
 
-            <p class="font-bold">市区町村：<%= spot.address.presence || "XXXXXXXXX" %></p>
+            <!-- 左：スポット情報 -->
+            <div class="text-sm space-y-1">
+              <p class="font-bold">スポット名：</p>
+              <p class="font-bold"><%= spot.name %></p>
+              <p class="font-bold">市区町村：</p>
+              <p class="font-bold"><%= spot.address.presence || "XXXXXXXXX" %></p>
+            </div>
 
+            <!-- 中央：画像 -->
+            <div class="w-30 h-30 bg-gray-300 mx-4 flex items-center justify-center overflow-hidden rounded">
+              <% if spot.spot_image.attached? %>
+                <%= image_tag url_for(spot.spot_image), class: "w-full h-full object-cover" %>
+              <% else %>
+                <span class="text-gray-600 text-sm">画像</span>
+              <% end %>
+            </div>
+
+            <!-- 右：ボタン -->
+            <div class="flex flex-col space-y-2">
+              <%= link_to "編集", edit_your_spot_path(spot), 
+                                  class: "bg-blue-500 hover:bg-blue-600 text-white px-4 py-1 rounded text-xs text-center" %>
+              <%= button_to "削除", your_spot_path(spot), 
+                                    method: :delete, 
+                                    data: { confirm: "本当に削除しますか？" }, 
+                                    class: "bg-red-500 hover:bg-red-600 text-white px-4 py-1 rounded text-xs text-center" %>
+            </div>
           </div>
-
-          <!-- 中央：画像 -->
-          <div class="w-30 h-30 bg-gray-300 mx-4 flex items-center justify-center overflow-hidden rounded">
-            <% if spot.spot_image.attached? %>
-              <%= image_tag url_for(spot.spot_image), class: "w-full h-full object-cover" %>
-            <% else %>
-              <span class="text-gray-600 text-sm">画像</span>
-            <% end %>
-          </div>
-
-          <!-- 右：ボタン -->
-          <div class="flex flex-col space-y-2">
-            <%= link_to "編集", edit_your_spot_path(spot), 
-                                class: "bg-blue-500 hover:bg-blue-600 text-white px-4 py-1 rounded text-xs text-center" %>
-            <%= button_to "削除", your_spot_path(spot), 
-                                  method: :delete, 
-                                  data: { confirm: "本当に削除しますか？" }, 
-                                  class: "bg-red-500 hover:bg-red-600 text-white px-4 py-1 rounded text-xs text-center" %>
-          </div>
+        <% end %>
+        <div class >
+          <%= paginate @spots %>
         </div>
+      <% else %>
+        <p>登録したスポットはありません。</p>
       <% end %>
-      <div class >
-        <%= paginate @spots %>
-      </div>
-    <% else %>
-      <p>登録したスポットはありません。</p>
-    <% end %>
 
+    </div>
   </div>
-
   <%= render 'shared/your_page_footer_form' %>
 </div>
