--- a/app/views/spots/new.html.erb
+++ b/app/views/spots/new.html.erb
@@ -1,7 +1,11 @@
 <div class="container mx-auto px-4">
-  <div class="spot-card bg-orange-200 rounded-lg border border-orange-700 p-4 space-y-6 max-w-5xl mx-auto">
-    <h1 class="text-2xl font-bold mb-6">スポット投稿</h1>
-    <%= render 'shared/spot_form', spot: @spot %>
+  <div class=" max-w-5xl mx-auto">
+    <%= render 'shared/flash_message'%>
+
+    <div class="spot-card bg-orange-200 rounded-lg border border-orange-700 p-4 space-y-6">
+      <h1 class="text-2xl font-bold mb-6">スポット投稿</h1>
+      <%= render 'shared/spot_form', spot: @spot %>
+    </div>
   </div>
 </div>
 
