20250525_add:埼玉県バリデーション

--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -64,7 +64,7 @@
 </script>
 
 <script async defer
-  src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_MAPS_API_KEY"] %>&callback=SearchMarker">
+  src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_MAPS_API_KEY"] %>&callback=SearchMarker&language=ja">
 </script>
 
 <style>
