--- a/app/views/spots/new.html.erb
+++ b/app/views/spots/new.html.erb
@@ -11,7 +11,7 @@
 
 <!-- Google Maps Script -->
 <script async defer
-  src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_MAPS_API_KEY"] %>&callback=NewMacker">
+  src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_MAPS_API_KEY"] %>&callback=NewMacker&language=ja">
 </script>
 
 <script>
