--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -56,7 +56,7 @@
 
 <!-- Google Maps JS読み込み -->
 <script async defer
-  src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_MAPS_API_KEY"] %>&callback=ShowMacker">
+  src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_MAPS_API_KEY"] %>&callback=ShowMacker&language=ja">
 </script>
 
 <script>
