--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,19 @@
     <link rel="apple-touch-icon" href="/icon.png">
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
+
+    <!-- Google tag (gtag.js) -->
+    <% if Rails.env.production? %>
+
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-EM99NL3P0M"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-EM99NL3P0M');
+      </script>
+    <% end %>
   </head>
 
   <body>
