--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -56,11 +56,11 @@
 
 <!-- Google Maps JS読み込み -->
 <script async defer
-  src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_MAPS_API_KEY"] %>&callback=ShowMacker&language=ja">
+  src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_MAPS_API_KEY"] %>&callback=ShowMarker&language=ja">
 </script>
 
 <script>
-  window.ShowMacker = function() {
+  window.ShowMarker = function() {
     const latLng = { lat: <%= @spot.latitude %>, lng: <%= @spot.longitude %> };
     const map = new google.maps.Map(document.getElementById("map"), {
       zoom: 16,
