--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -3,7 +3,10 @@
 <script>
 
 
-  function SearchMarker() {
+  async function SearchMarker() {
+    const { Map, InfoWindow } = await google.maps.importLibrary("maps");
+    const { AdvancedMarkerElement } = await google.maps.importLibrary("marker");
+
     let map; // グローバルに定義
     
     // 地図要素を取得
@@ -12,16 +15,19 @@
     // 現在地を取得
     // ブラウザに位置情報の取得を依頼する関数です。成功すると、現在地の情報が position オブジェクトとして渡されます。
     navigator.geolocation.getCurrentPosition(function (position) {
-      // 「LatLng: 地理座標（緯度と経度）」で表される地点の枠を作り「userLatLng」に入れる
-      const userLatLng = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
+      // 「LatLng: 地理座標（緯度と経度）」で表される地点の枠を新方式で作り「userLatLng」に入れる
+      const userLatLng = {
+        lat: position.coords.latitude, 
+        lng: position.coords.longitude
+      };
 
-      map = new google.maps.Map(mapElement, {
+      map = new Map(mapElement, {
         center: userLatLng,
         zoom: 15
       });
 
       // 現在地のマーカーを入れる
-      new google.maps.Marker({
+      new AdvancedMarkerElement({
         map: map,
         position: userLatLng,
         icon: {
@@ -33,7 +39,7 @@
       <% @spots.each do |spot| %>
         (
           function(){
-            const marker = new google.maps.Marker({
+            const marker = new AdvancedMarkerElement({
               position: {lat: <%= spot.latitude %>, lng: <%= spot.longitude %>},
               map: map,
               // j は Rails の escape_javascript ヘルパーの省略記法。JavaScript に埋め込む文字列を安全に変換（エスケープ）するために使用
@@ -41,7 +47,7 @@
             })
 
             // 吹き出しの追加
-            const infoWindow = new google.maps.InfoWindow({
+            const infoWindow = new InfoWindow({
               content: 
                     `
                       <%= j spot.name %><br>
@@ -63,8 +69,19 @@
   }
 </script>
 
-<script async defer
-  src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_MAPS_API_KEY"] %>&callback=SearchMarker&language=ja">
+ <%# Dynamic Library Import API に移行する為に
+     ダイレクト スクリプト読み込みタグをインライン ブートストラップ ローダのタグに置き換え %>
+<script>
+  (g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})({
+    key: "<%= ENV['GOOGLE_MAPS_API_KEY'] %>",
+    v: "weekly",
+  });
+</script>
+
+<script>
+  window.addEventListener('load', function() {
+    setTimeout(SearchMarker, 100);
+  });
 </script>
 
 <style>
