--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -1,14 +1,37 @@
-<div id="map"></div>
+<gmp-map
+  id= "map"
+  style= "height: 100%; width: 100%;"
+  map-id= "<%= ENV['GOOGLE_MAPS_ID_API_KEY'] %>"
+  center= "35.8940, 139.6280"
+  zoom= "15"
+>
+</gmp-map>
+
+<style>
+  gmp-map {
+    position: absolute;
+    top: 64px;
+    bottom: 80px;
+    width: 100%;
+  }
+</style>
 
 <script>
-  async function SearchMarker() {
-    const { Map, InfoWindow } = await google.maps.importLibrary("maps");
-    const { AdvancedMarkerElement, PinElement } = await google.maps.importLibrary("marker");
+  async function initMap() {
+    if (!window.google || !window.google.maps) {
+      console.error('Google Maps API is not loaded');
+      return;
+    }
 
-    let map; // グローバルに定義
+    // dmp-mapはマップの読み込みを自動でしてくれるため、const { Map } は削除
+    const { InfoWindow } = await google.maps.importLibrary("maps");
+    const { AdvancedMarkerElement, PinElement } = await google.maps.importLibrary("marker");
     
     // 地図要素を取得
-    const mapElement = document.getElementById('map');
+    const gmpMap = document.getElementById('map');
+
+    console.log("gmp:",gmpMap.innerMap);
+    const map = await gmpMap.innerMap;
 
     // 現在地を取得
     // ブラウザに位置情報の取得を依頼する関数です。成功すると、現在地の情報が position オブジェクトとして渡されます。
@@ -19,11 +42,16 @@
         lng: position.coords.longitude
       };
 
-      map = new Map(mapElement, {
-        center: userLatLng,
-        zoom: 15,
-        mapId: "<%= ENV['GOOGLE_MAPS_ID_API_KEY'] %>"
-      });
+      console.log("map",map)
+
+      map.setCenter(userLatLng);
+
+      // 初期化は一番上で設定。 
+      // map = new Map(mapElement, {
+      //   center: userLatLng,
+      //   zoom: 15,
+      //   mapId: "<%= ENV['GOOGLE_MAPS_ID_API_KEY'] %>"
+      // });
 
       const pinCurrentLocation = new PinElement({
         background: "#0080c6",
@@ -76,23 +104,24 @@
  <%# Dynamic Library Import API に移行する為に
      ダイレクト スクリプト読み込みタグをインライン ブートストラップ ローダのタグに置き換え %>
 <script>
-  (g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})({
-    key: "<%= ENV['GOOGLE_MAPS_API_KEY'] %>",
-    v: "weekly",
-  });
+  if (!window.googleMapsLoaded) {
+    (g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})({
+      key: "<%= ENV['GOOGLE_MAPS_API_KEY'] %>",
+      v: "weekly",
+    });
+
+    window.googleMapsLoaded = true;
+  }
 </script>
 
 <script>
   window.addEventListener('load', function() {
-    setTimeout(SearchMarker, 100);
+    // APIが既に読み込まれている場合はすぐに実行、そうでなければ少し待つ
+    if (window.google && window.google.maps) {
+      initMap();
+    } else {
+      setTimeout(initMap, 100);
+    }
   });
 </script>
 
-<style>
-  #map {
-    position: absolute;
-    top: 64px;
-    bottom: 80px;
-    width: 100%;
-  }
-</style>
