--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -18,6 +18,10 @@
 
 <script>
   async function initMap() {
+    // 地図要素を取得
+    const gmpMap = document.getElementById('map');
+    if (!gmpMap) return;
+
     if (!window.google || !window.google.maps) {
       console.error('Google Maps API is not loaded');
       return;
@@ -26,12 +30,9 @@
     // dmp-mapはマップの読み込みを自動でしてくれるため、const { Map } は削除
     const { InfoWindow } = await google.maps.importLibrary("maps");
     const { AdvancedMarkerElement, PinElement } = await google.maps.importLibrary("marker");
-    
-    // 地図要素を取得
-    const gmpMap = document.getElementById('map');
 
     // console.log("gmp:",gmpMap.innerMap);
-    const map = await gmpMap.innerMap;
+    const map = gmpMap.innerMap;
 
     // 現在地を取得
     // ブラウザに位置情報の取得を依頼する関数です。成功すると、現在地の情報が position オブジェクトとして渡されます。
