--- a/app/views/shared/_your_page_footer_form.html.erb
+++ b/app/views/shared/_your_page_footer_form.html.erb
@@ -1,7 +1,7 @@
   <div class="fixed bottom-16 left-0 right-0 w-full">
     <div class="max-w-2xl mx-auto">
       <div class="flex justify-between text-center justify-center items-center">
-        <%= link_to '#', class: "w-1/3 bg-orange-200 border-r-1 border-l-2 border-orange-300 hover:bg-orange-300 font-semibold text-sm block py-3" do %>
+        <%= link_to favorites_your_spots_path, class: "w-1/3 bg-orange-200 border-r-1 border-l-2 border-orange-300 hover:bg-orange-300 font-semibold text-sm block py-3" do %>
           <div class="flex flex-col ">
             <span>お気に入り</span>
             <span>スポット一覧</span>
