--- a/app/views/your_spots/favorites.html.erb
+++ b/app/views/your_spots/favorites.html.erb
@@ -29,12 +29,7 @@
 
             <!-- 右：ボタン -->
             <div class="flex flex-col space-y-2">
-              <%= link_to "編集", edit_your_spot_path(spot), 
-                                  class: "bg-blue-500 hover:bg-blue-600 text-white px-4 py-1 rounded text-xs text-center" %>
-              <%= button_to "削除", your_spot_path(spot), 
-                                    method: :delete, 
-                                    data: { confirm: "本当に削除しますか？" }, 
-                                    class: "bg-red-500 hover:bg-red-600 text-white px-4 py-1 rounded text-xs text-center" %>
+              <%= render 'shared/favorite/favorite_button', { spot: spot } %>
             </div>
           </div>
         <% end %>
