--- a/app/views/users/shared/_links.html.erb
+++ b/app/views/users/shared/_links.html.erb
@@ -28,7 +28,7 @@
                   data: { turbo: false },
                   class: "bg-white text-black flex items-center gap-2" do %>
 
-        <%# Googleのアイコン（画像 or heroiconsなど）を表示 %>
+        <%# Googleのアイコン（画像）を表示 %>
         <img src="/assets/web_light_rd_ctn.svg" alt="Google" class="w-5 h-5">
       <% end %>
     <% end %>
