--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,6 +1,9 @@
 @import "tailwindcss";
+@plugin "daisyui";
+
 
 @layer components {
+  /* フラッシュメッセージ */
   .alert-notice {
     @apply p-3 mb-4 rounded border bg-sky-100 text-blue-800;
   }
