20250629_fix:お気に入りアイコンが本番環境で表示されないので修正-01

--- a/app/views/shared/favorite/_favorite_no.html.erb
+++ b/app/views/shared/favorite/_favorite_no.html.erb
@@ -1,5 +1,5 @@
 <%= link_to favorite_path(current_user.favorites.find_by(spot_id: spot.id)), id: "unfavorite-button-for-spot-#{spot.id}", data: { turbo_method: :delete } do %>
   <div class="w-20 h-20">
-    <%= image_tag "/assets/favorite.png" %>
+    <%= image_tag "favorite.png", alt: "お気に入り", class: "w-5 h-5" %>
   </div>
 <% end %>
