--- a/app/views/shared/favorite/_favorite_yes.html.erb
+++ b/app/views/shared/favorite/_favorite_yes.html.erb
@@ -1,5 +1,5 @@
 <%= link_to favorites_path(spot_id: spot.id), id: "favorite-button-for-spot-#{spot.id}", data: { turbo_method: :post } do %>
   <div class="w-20 h-20">
-    <%= image_tag "unfavorite.png", alt: "お気に入り", class: "w-5 h-5" %>
+    <%= image_tag "favorite/unfavorite.png", alt: "お気に入り解除ボタン", class: "w-5 h-5" %>
   </div>
 <% end %>
