--- a/app/views/users/shared/_links.html.erb
+++ b/app/views/users/shared/_links.html.erb
@@ -27,7 +27,7 @@
                   class: "bg-white text-black flex items-center gap-2" do %>
 
         <%# Googleのアイコン（画像）を表示 %>
-        <%= image_tag "google_login.svg", alt: "Google認証にてログイン", class: "w-8 h-8" %>
+        <%= image_tag "google_login.svg", alt: "Google認証にてログイン" %>
       <% end %>
     <% end %>
   <% end %>
