--- a/app/views/shared/common/_footer.html.erb
+++ b/app/views/shared/common/_footer.html.erb
@@ -20,7 +20,7 @@
     <span>探索</span>
   <% end %>
 
-  <%= link_to '#', class:"btn btn-ghost flex flex-col items-center font-bold flex-1 min-w-0" do %>
+  <%= link_to search_spots_path, class:"btn btn-ghost flex flex-col items-center font-bold flex-1 min-w-0" do %>
     <svg class="h-6 w-6 text-yellow-400" fill="currentColor" viewBox="0 0 24 24">
       <path d="M12 17.27L18.18 21 16.54 13.97 22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>
     </svg>
