--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,8 +29,8 @@
     <% end %>
   </head>
 
-  <body>
-    <div class="fixed top-0 left-0 right-0" >
+  <body class="bg-lime-100">
+    <div class="fixed top-0 left-0 right-0 z-10 bg-green-500" >
       <% if signed_in? %>
         <%= render 'shared/common/header' %>
       <% else %>
@@ -42,7 +42,7 @@
           <%= yield %>
     </div>
 
-    <div class="fixed bottom-0 bg-green-200 flex w-full items-center text-xs py-2 border-t border-green-400">
+    <div class="fixed bottom-0 bg-green-500 flex w-full items-center text-xs py-2 border-t border- border-green-800 z-10">
       <% if signed_in? %>
         <%= render 'shared/common/footer' %>
       <% else %>
