--- a/app/views/shared/common/_footer.html.erb
+++ b/app/views/shared/common/_footer.html.erb
@@ -1,28 +1,37 @@
-  <%= link_to root_path, class:"flex flex-col items-center font-bold flex-1 min-w-0" do %>
-    <svg class="h-6 w-6 text-red-500" fill="currentColor" viewBox="0 0 24 24">
+<div class="flex justify-center mx-auto items-center space-x-4 text-sm py-2">
+
+  <%= link_to root_path, class:"flex flex-col items-center px-2" do %>
+    <svg class="h-5 w-5 text-red-500" fill="currentColor" viewBox="0 0 24 24">
       <path d="M3 12l9-9 9 9-9 9-9-9z"/>
     </svg>
     <span>ホーム</span>
   <% end %>
 
-  <%= link_to new_spot_path, class:"btn btn-ghost flex flex-col items-center font-bold flex-1 min-w-0" do %>
-    <svg class="h-6 w-6 text-green-700" fill="currentColor" viewBox="0 0 24 24">
+  <span class="text-gray-400 text-2xl">|</span>
+
+  <%= link_to new_spot_path, class:"flex flex-col items-center px-2" do %>
+    <svg class="h-5 w-5 text-green-700" fill="currentColor" viewBox="0 0 24 24">
       <path d="M6 2h12v20H6z"/>
     </svg>
     <span>地点登録</span>
   <% end %>
 
+  <span class="text-gray-400 text-2xl">|</span>
 
-  <%= link_to spots_path, class:"btn btn-ghost flex flex-col items-center flex-1 min-w-0" do %>
-    <svg class="h-6 w-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+  <%= link_to spots_path, class:"flex flex-col items-center px-2" do %>
+    <svg class="h-5 w-5 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2a10 10 0 00-7.07 17.07A10 10 0 1012 2z"/>
     </svg>
     <span>探索</span>
   <% end %>
 
-  <%= link_to search_spots_path, class:"btn btn-ghost flex flex-col items-center font-bold flex-1 min-w-0" do %>
-    <svg class="h-6 w-6 text-yellow-400" fill="currentColor" viewBox="0 0 24 24">
+  <span class="text-gray-400 text-2xl">|</span>
+
+  <%= link_to search_spots_path, class:"flex flex-col items-center px-2" do %>
+    <svg class="h-5 w-5 text-yellow-400" fill="currentColor" viewBox="0 0 24 24">
       <path d="M12 17.27L18.18 21 16.54 13.97 22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>
     </svg>
     <span>周辺検索</span>
   <% end %>
+
+</div>
