--- a/app/views/shared/common/_header.html.erb
+++ b/app/views/shared/common/_header.html.erb
@@ -1,5 +1,5 @@
   <!-- ヘッダー -->
-  <div class="flex items-center justify-between bg-green-400 py-2">
+  <div class="flex items-center justify-between py-2">
     <div class="text-3xl font-bold text-orange-600">
       <a href="#" class="px-1">Saita<span class="text-yellow-400">Manear</span></a>
     </div>
