--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
       <% end %>
     </div>
 
-    <div class="pt-24 pb-24">
+    <div class="pt-24 pb-24 min-h-screen">
           <%= yield %>
     </div>
 
