--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,29 +1,37 @@
-<h2>Sign up</h2>
+<div class="flex flex-col items-center justify-start pt-10 min-h-screen bg-base-100">
+  <div class="card w-full max-w-sm bg-orange-200 shadow-xl">
+    <div class="card-body">
+      <h2 class="card-title justify-center">新規登録</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "users/shared/error_messages", resource: resource %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "users/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <div class="form-control mb-4">
+          <%= f.label :email, "メールアドレス", class: "label" %>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input input-bordered" %>
+        </div>
+
+        <div class="form-control mb-4">
+          <%= f.label :password, "パスワード", class: "label" %>
+          <% if @minimum_password_length %>
+            <em class="text-xs text-gray-600 pl-1">（<%= @minimum_password_length %>文字以上）</em>
+          <% end %>
+          <%= f.password_field :password, autocomplete: "new-password", class: "input input-bordered" %>
+        </div>
+
+        <div class="form-control mb-6">
+          <%= f.label :password_confirmation, "パスワード（確認用）", class: "label" %>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input input-bordered" %>
+        </div>
+
+        <div class="form-control mt-4">
+          <%= f.submit "登録する", class: "btn btn-warning" %>
+        </div>
+      <% end %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+  <div class="pt-10">
+    <%= render "users/shared/links" %>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "users/shared/links" %>
+</div>
