--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,42 +1,30 @@
-  <div class="container text-center mx-auto mx-4">
-    <%= render 'shared/flash_message' %>
-
-    <h1 class="text-6xl font-bold m-8">
-      Welcome!!<br />
-      SaitaManear<br />
-    </h1>
-    <h6 class="text-l m-8">
-      Saitama(埼玉) + Mania(マニア) + near(近く)
-    </h6>
-    <h1 class="text-3xl font-bold m-8 text-orange-500">
-      春日部つむぎ<br />
-      「お前が埼玉県民になるんだよ！」<br />
-    </h1>
-    <h1 class="text-3xl font-bold m-8 text-lime-500">
-      ずんだもん<br />
-      「えぇ…」
-    </h1>
-
-    <h1 class mx-auto>
-    SaitaManearとは？<br />
-    埼玉県の有名な観光地などに向かった「ついでに」サイトにはあまり書かれていない<br />
-    現在地から近くの知られていない秘境や、なんや変わりのなさそうな場所の魅力を検索して探索ができる。<br />
-    <br />
-    特に変わり映えのないけど見てみたら面白い階段や、身近にある人目に触れないな変な物などまで、有名な場所以外にも巡る場所を増やすためのサービス。<br />
-    </h1>
-
-    <div class="flex justify-center flex-col pt-8">
-      <%= link_to '#', class: "inline-block bg-orange-200 border-b-1 border-t-2 border-orange-300 hover:bg-orange-300 font-semibold py-2 px-4" do %>
-      <span>利用規約</span>
-      <% end %>
-
-      <%= link_to '#', class: "inline-block bg-orange-200 border-b-1 border-t-1 border-orange-300 hover:bg-orange-300 font-semibold py-2 px-4" do %>
-      <span>プライバシーポリシー</span>
-      <% end %>
-
-      <%= link_to '#', class: "inline-block bg-orange-200 border-b-2 border-t-1 border-orange-300 hover:bg-orange-300 font-semibold py-2 px-4" do %>
-      <span>お問い合わせ</span>
-      <% end %>
-    </div>
+<!-- ✅ 背景付きの Welcome セクション -->
+<div class="bg-spot-wrapper relative flex items-center justify-center z-0 bg-no-repeat bg-top bg-scroll bg-contain">
+  <div class="text-center">
+    <%= image_tag "top/welcome_saitamanear.png", alt: "welcome_saitamanear", class: "w-100 h-auto mx-auto" %>
   </div>
+</div>
 
+<!-- ✅ サービス説明 -->
+<div class="pt-4 prose mx-auto max-w-2xl text-center">
+  <p class="py-5 text-xl font-semibold text-gray-800">
+    Saitama(埼玉) + Mania(マニア) + near(近く)
+  </p>
+
+  <p class="py-4 text-lg text-gray-800 leading-relaxed">
+    「サイトにはあまり載っていない穴場」や「ちょっと変わったスポット」を発見！<br />
+    埼玉で“寄り道”を楽しむためのサービスです。
+  </p>
+</div>
+
+<div class="flex flex-col gap-2 pt-10 mx-auto w-80">
+  <%= link_to '#', class: "btn bg-orange-200 hover:bg-orange-300 font-semibold text-center" do %>
+    利用規約
+  <% end %>
+  <%= link_to '#', class: "btn bg-orange-200 hover:bg-orange-300 font-semibold text-center" do %>
+    プライバシーポリシー
+  <% end %>
+  <%= link_to '#', class: "btn bg-orange-200 hover:bg-orange-300 font-semibold text-center" do %>
+    お問い合わせ
+  <% end %>
+</div>
