--- a/app/views/top/sorry.html.erb
+++ b/app/views/top/sorry.html.erb
@@ -1,7 +1,7 @@
 <div class="flex flex-col items-center justify-start pt-10 min-h-screen bg-base-100">
   <div class="card w-full max-w-sm border-red">
     <div class="card-body">
-      <%= image_tag "sorry.png", alt: "現在製作中……", class: "w-100 h-100" %>
+      <%= image_tag "現在製作中.png", alt: "現在製作中……", class: "w-100 h-100" %>
     </div>
 
     <h1 class="text-2xl text-center">
