--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,16 +1,27 @@
-<h2>Forgot your password?</h2>
+<div class="flex flex-col items-center justify-start pt-10 min-h-screen bg-base-100">
+  <div class="card w-full max-w-sm bg-orange-200 shadow-xl">
+    <div class="card-body">
+      <h1 class="card-title justify-center">パスワード忘れてしまった場合</h1>
+      <h2 class="items-center size-xl">
+        🚧現在改修中🚧 <br />
+        メールは飛びません
+      </h2>
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+        <%= render "users/shared/error_messages", resource: resource %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "users/shared/error_messages", resource: resource %>
+        <div class="form-control mb-4">
+          <%= f.label :email, "メールアドレス", class: "label" %>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input input-bordered" %>
+        </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <div class="form-control mt-6">
+          <%= f.submit "送信", class: "btn btn-warning" %>
+        </div>
+      <% end %>
+    </div>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+  <div class="pt-10">
+    <%= render "users/shared/links" %>
   </div>
-<% end %>
-
-<%= render "users/shared/links" %>
+</div>
