--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,43 +1,54 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="flex flex-col items-center justify-start pt-10 min-h-screen bg-base-100">
+  <div class="card w-full max-w-sm bg-orange-200 shadow-xl">
+    <div class="card-body">
+      <h2 class="card-title justify-center">アカウント編集</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "users/shared/error_messages", resource: resource %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <%= render "users/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <div class="form-control mb-4">
+          <%= f.label :email, "メールアドレス", class: "label" %>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input input-bordered" %>
+        </div>
+
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <div class="text-sm text-gray-600 mb-4">
+            現在確認中のメールアドレス: <%= resource.unconfirmed_email %>
+          </div>
+        <% end %>
+
+        <div class="form-control mb-4">
+          <%= f.label :password, "新しいパスワード（#{@minimum_password_length}文字以上 / 変更しない場合は空欄）", class: "label" %>
+          <%= f.password_field :password, autocomplete: "new-password", class: "input input-bordered" %>
+        </div>
+
+        <div class="form-control mb-4">
+          <%= f.label :password_confirmation, "パスワード確認", class: "label" %>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input input-bordered" %>
+        </div>
+
+        <div class="form-control mb-4">
+          <%= f.label :current_password, "現在のパスワード（変更確認用）", class: "label" %>
+          <%= f.password_field :current_password, autocomplete: "current-password", class: "input input-bordered" %>
+        </div>
+
+        <div class="form-control mt-4">
+          <%= f.submit "更新", class: "btn btn-warning" %>
+        </div>
+      <% end %>
+    </div>
   </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
+  <div class="card w-full max-w-sm mt-8 bg-red-100 shadow-xl">
+    <div class="card-body items-center bg-red-50">
+      <p class="text-sm text-gray-600 mb-2">退会をご希望ですか？</p>
+      <%= button_to "アカウント削除", registration_path(resource_name),
+          data: { confirm: "本当に退会しますか？", turbo_confirm: "本当に退会しますか？" },
+          method: :delete, class: "btn btn-error" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="pt-10">
+    <%= link_to "戻る", root_path, class: "link text-blue-600" %>
   </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
-
-<%= link_to "Back", :back %>
+</div>
