--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="h-full">
+<html class="h-full", data-theme="light">
   <head>
     <title><%= content_for(:title) || "SaitaManear" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
