--- a/app/views/top/sorry.html.erb
+++ b/app/views/top/sorry.html.erb
@@ -1,4 +1,4 @@
-<div class="flex flex-col items-center justify-start pt-10 min-h-screen bg-base-100">
+<div class="flex flex-col items-center pt-10">
   <div class="card w-full max-w-sm border-red">
     <div class="card-body">
       <%= image_tag "現在製作中.png", alt: "現在製作中……", class: "w-100 h-100" %>
