--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<div class="flex flex-col items-center justify-start pt-10 min-h-screen bg-base-100">
+<div class="flex flex-col items-center pt-10">
   <div class="card w-full max-w-sm bg-orange-200 shadow-xl">
     <div class="card-body">
       <h1 class="card-title justify-center">パスワード忘れてしまった場合</h1>
