画像位置修正

--- a/app/views/spots/search.html.erb
+++ b/app/views/spots/search.html.erb
@@ -1,7 +1,7 @@
-<div class="flex items-centerpt-10">
+<div class="flex items-center justify-center items-center bg-lime-100 pt-10">
   <div class="card w-full max-w-sm border-red">
     <div class="card-body">
-      <%= image_tag "sorry.png", alt: "現在製作中……", class: "w-100 h-100" %>
+      <%= image_tag "sorry.png", alt: "現在製作中……"%>
     </div>
 
     <h1 class="text-2xl text-center">
