--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -23,7 +23,7 @@
         map: map,
         position: userLatLng,
         icon: {
-          url: "http://maps.google.com/mapfiles/ms/icons/blue-dot.png"
+          url: "https://maps.google.com/mapfiles/ms/icons/blue-dot.png"
         }
       });
 
