20250712_add:Footer部分テンプレまとめ

--- a/app/views/shared/common/_footer.html.erb
+++ b/app/views/shared/common/_footer.html.erb
@@ -9,7 +9,7 @@
 
   <span class="text-gray-400 text-2xl">|</span>
 
-  <%= link_to new_spot_path, class:"flex flex-col items-center px-2" do %>
+  <%= link_to new_spot_path class:"flex flex-col items-center px-2" do %>
     <svg class="h-5 w-5 text-green-700" fill="currentColor" viewBox="0 0 24 24">
       <path d="M6 2h12v20H6z"/>
     </svg>
