--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -3,8 +3,13 @@
     <div class="card-body">
       <h2 class="card-title justify-center">アカウント編集</h2>
 
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= form_for(resource, as: resource_name, url: your_profile_path(resource_name), html: { method: :put }) do |f| %>
         <%= render "users/shared/error_messages", resource: resource %>
+
+        <div class="form-control mb-4">
+          <%= f.label :name, "名前", class: "label" %>
+          <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "input input-bordered" %>
+        </div>
 
         <div class="form-control mb-4">
           <%= f.label :email, "メールアドレス", class: "label" %>
